--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 
 
 
-  <section class="hero-sec d-flex align-items-center">
+  <!-- <section class="hero-sec d-flex align-items-center">
 
     <div class="container">
 
@@ -81,7 +81,7 @@
         </div>
 
     </div>
-  </section>
+  </section> -->
 
 
   <section class="section">
