--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
   </section>
 
 
-
+<!-- 
   <section class="hero-sec d-flex align-items-center">
 
     <div class="container">
@@ -79,7 +79,7 @@
         </div>
 
     </div>
-  </section>
+  </section> -->
 
 
 
